--- a/debian/rules
+++ b/debian/rules
@@ -17,10 +17,10 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	(for mod in $(MODULE_DIRS); do \
-		dh_installdirs -pplatform-modules-$${mod} \
+		dh_installdirs -pplatform-modules-e582-$${mod} \
 			$(KERNEL_SRC)/$(INSTALL_MOD_DIR); \
 		cp $(MOD_SRC_DIR)/$${mod}/modules/*.ko \
-			debian/platform-modules-$${mod}/$(KERNEL_SRC)/$(INSTALL_MOD_DIR); \
+			debian/platform-modules-e582-$${mod}/$(KERNEL_SRC)/$(INSTALL_MOD_DIR); \
 	done)
 
 override_dh_usrlocal:
