--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,17 @@
 Source: sonic-centec-platform-modules
 Section: main
 Priority: extra
-Maintainer: xuwj <xuwj@centecnetworks.com>
+Maintainer: yangbs <yangbs@centecnetworks.com>
 Build-Depends: debhelper (>= 8.0.0), bzip2
 Standards-Version: 3.9.3
 
 Package: platform-modules-e582-48x2q4z
 Architecture: amd64
-Depends: linux-image-3.16.0-4-amd64
+Depends: linux-image-3.16.0-5-amd64
 Description: kernel modules for platform devices such as fan, led, sfp
 
 Package: platform-modules-e582-48x6q
 Architecture: amd64
-Depends: linux-image-3.16.0-4-amd64
+Depends: linux-image-3.16.0-5-amd64
 Description: kernel modules for platform devices such as fan, led, sfp
 
