--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ override_dh_auto_install:
 	(for mod in $(MODULE_DIRS); do \
 		dh_installdirs -pplatform-modules-e582-$${mod} \
 			$(KERNEL_SRC)/$(INSTALL_MOD_DIR); \
-		cp $(MOD_SRC_DIR)/$${mod}/modules/*.ko \
+		cp -f $(MOD_SRC_DIR)/$${mod}/modules/*.ko \
 			debian/platform-modules-e582-$${mod}/$(KERNEL_SRC)/$(INSTALL_MOD_DIR); \
 	done)
 
@@ -29,5 +29,7 @@ override_dh_clean:
 	dh_clean
 	(for mod in $(MODULE_DIRS); do \
 		make -C $(KERNEL_SRC)/build M=$(MOD_SRC_DIR)/$${mod}/modules clean; \
+		rm -rf $(MOD_SRC_DIR)/$${mod}/modules/*.ko; \
+		rm -rf debian/platform-modules-e582-$${mod}/$(KERNEL_SRC)/$(INSTALL_MOD_DIR)/*.ko; \
 	done)
 
